--- a/packages.bib
+++ b/packages.bib
@@ -26,8 +26,8 @@
 @Manual{R-BSDA,
   title = {BSDA: Basic Statistics and Data Analysis},
   author = {Alan T. Arnholt and Ben Evans},
-  year = {2017},
-  note = {R package version 1.2.0},
+  year = {2021},
+  note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=BSDA},
 }
 
@@ -43,7 +43,7 @@
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2021},
-  note = {R package version 1.14.0},
+  note = {R package version 1.14.2},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -147,8 +147,8 @@
   title = {Hmisc: Harrell Miscellaneous},
   author = {Harrell, Jr., Frank E},
   year = {2021},
-  note = {R package version 4.5-0},
-  url = {https://CRAN.R-project.org/package=Hmisc},
+  note = {R package version 4.6-0},
+  url = {https://hbiostat.org/R/Hmisc/},
 }
 
 @Manual{R-hrbrthemes,
@@ -194,8 +194,8 @@
 @Manual{R-lattice,
   title = {lattice: Trellis Graphics for R},
   author = {Deepayan Sarkar},
-  year = {2020},
-  note = {R package version 0.20-41},
+  year = {2021},
+  note = {R package version 0.20-45},
   url = {http://lattice.r-forge.r-project.org/},
 }
 
@@ -211,7 +211,7 @@
   title = {Matrix: Sparse and Dense Matrix Classes and Methods},
   author = {Douglas Bates and Martin Maechler},
   year = {2021},
-  note = {R package version 1.3-2},
+  note = {R package version 1.3-4},
   url = {http://Matrix.R-forge.R-project.org/},
 }
 
@@ -252,8 +252,8 @@ https://personality-project.org/r/psych-manual.pdf},
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
+  year = {2021},
+  note = {R package version 2.0.2},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -382,7 +382,7 @@ Output},
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.4},
+  note = {R package version 3.1.5},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
