--- a/10-GoogleAnalytics.Rmd
+++ b/10-GoogleAnalytics.Rmd
@@ -743,11 +743,20 @@ head(clean_names(penguins))
 library(tidyr)
 penguins2 <- penguins %>% arrange(-bill_length_mm)
 
-penguins %>% group_by(island) %>% drop_na() %>% summarize(mean_bill_length_mm = mean(bill_length_mm))
+penguins %>% 
+  group_by(island) %>% 
+  drop_na() %>% 
+  summarize(mean_bill_length_mm = mean(bill_length_mm), .groups = 'drop')
 
-penguins %>% group_by(island) %>%  drop_na() %>% summarize(max_bill_length_mm = max(bill_length_mm))
+penguins %>% 
+  group_by(island) %>%  
+  drop_na() %>% 
+  summarize(max_bill_length_mm = max(bill_length_mm), .groups = 'drop')
 
-penguins %>% group_by(species, island) %>%  drop_na() %>% summarize(max_bl = max(bill_length_mm), mean_bl = mean(bill_length_mm))
+penguins %>% 
+  group_by(species, island) %>%  
+  drop_na() %>% 
+  summarize(max_bl = max(bill_length_mm), mean_bl = mean(bill_length_mm), .groups = 'drop')
 ```
 
 ```{r}
